--- a/src/app.css
+++ b/src/app.css
@@ -5,12 +5,12 @@
 		Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
 		'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--color-bg-0: rgb(50, 50, 50);
-	--color-bg-1: rgb(0,0,0);
-	--color-bg-2: rgb(75,75,75);
-	--color-theme-1: #ff3e00;
-	--color-theme-2: #4075a6;
-	--color-text: rgba(0, 0, 0, 0.7);
+	--color-bg-0: rgb(17, 18 ,23);
+	--color-bg-1: rgb(24, 27, 31);
+	--color-bg-2: rgb(44, 47, 52);
+	--color-theme-1: #9f9fac;
+	--color-text: rgb(204, 204, 220);
+	--color-border-1: rgb(159,159,172);
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
@@ -23,7 +23,6 @@ body {
 	background-attachment: fixed;
 	background-color: var(--color-bg-1);
 	background-size: 100vw 100vh;
-	background-image: linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
 }
 
 h1,
